# TouchDesigner-Plugin-Template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
derivative/: CHOP_CPlusPlusBase.h  CPlusPlus_Common.h  DAT_CPlusPlusBase.h  FrameQueue.cpp  FrameQueue.h  SOP_CPlusPlusBase.h  TOP_CPlusPlusBase.h
derivative/GL/: glew.h  glewinfo.c
src/: CHOP_main.cpp  DAT_main.cpp  SOP_main.cpp  TOP_main.cpp  main.cpp
